--- a/public/style.css
+++ b/public/style.css
@@ -200,7 +200,7 @@ footer{
 @media(max-width: 1100px) {
     .header {
         background-color: #2f6dbf;
-        padding: 20px 15px;
+        padding: 20px 15px 0px 15px;
     }
 
     .logo {
